# 20260219NewRust

./: .deploy-bust.txt  .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  railway.toml
.github/workflows/: ci.yml
apps/platform/: Cargo.toml  package.json  tailwind.config.js
apps/platform/public/: index.html
apps/platform/src/: app.rs  lib.rs  main_platform.rs  map.rs  server.rs
apps/platform/style/: tailwind.css
artifacts/deploy/: postcheck-20260222-190911.json
crates/game-wasm/: Cargo.toml
crates/game-wasm/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
infra/k8s/: deployment.yaml
infra/map/: providers.toml
infra/prometheus/: prometheus.yml
infra/railway/: README.md  RUNBOOK.md  RUNBOOK_UI.md
infra/railway/clickhouse/: Dockerfile  railway.env.example
infra/railway/grafana/: Dockerfile  railway.env.example
infra/railway/loki/: Dockerfile  railway.toml
infra/railway/nats/: Dockerfile
infra/railway/platform/: Dockerfile  railway.env.example  railway.toml
infra/railway/postgres/: Dockerfile  railway.env.example
infra/railway/prometheus/: Dockerfile  prometheus.yml  railway.env.example  railway.toml
infra/railway/redis/: Dockerfile  railway.env.example
infra/sql/: init.sql
infra/workers/: README.md
scripts/: deploy-postcheck.ps1  deploy-preflight.ps1  deploy-rollback.ps1  e2e-social-flow.ps1
