[package]
name = "platform"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "platform"
path = "src/main_platform.rs"

[[bin]]
name = "platform-server"
path = "src/main.rs"

[features]
default = ["ssr"]
ssr = [
  "dep:leptos",
  "dep:leptos_meta",
  "dep:leptos_router",
  "dep:axum",
  "dep:tokio",
  "dep:leptos_axum",
  "dep:tower",
  "dep:tower-http",
  "dep:sqlx",
  "dep:redis",
  "dep:deadpool-redis",
  "dep:async-nats",
  "dep:tokio-tungstenite",
  "dep:argon2",
  "dep:jsonwebtoken",
  "dep:axum-login",
  "dep:prometheus",
  "dep:axum-prometheus",
  "dep:clickhouse",
  "dep:aws-sdk-s3",
  "dep:aws-config",
  "dep:prost",
  "dep:rmp-serde",
  "dep:wtransport",
  "dep:anyhow",
  "dep:rand",
  "dep:futures-util",
  "dep:async-graphql",
  "dep:async-graphql-axum",
  "dep:simd-json",
  "dep:tracing-subscriber"
]
hydrate = [
  "dep:leptos",
  "dep:leptos_meta",
  "dep:leptos_router",
  "dep:rmp-serde",
  "leptos/hydrate"
]

[dependencies]
shared = { path = "../../crates/shared" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

leptos = { version = "0.7", default-features = false, features = ["csr", "ssr"], optional = true }
leptos_meta = { version = "0.7", optional = true }
leptos_router = { version = "0.7", optional = true }
leptos_axum = { version = "0.7", optional = true }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "HtmlDivElement", "WebSocket", "MessageEvent", "BinaryType", "console"] }
js-sys = "0.3"
geo = "0.29"
gloo-net = "0.6"

axum = { version = "0.8", features = ["ws", "macros"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"], optional = true }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"], optional = true }
redis = { version = "0.28", features = ["tokio-comp", "aio", "connection-manager", "geospatial"], optional = true }
deadpool-redis = { version = "0.19", optional = true }
async-nats = { version = "0.39", optional = true }
tokio-tungstenite = { version = "0.26", optional = true }

argon2 = { version = "0.5", optional = true }
jsonwebtoken = { version = "9", optional = true }
axum-login = { version = "0.17", optional = true }

prometheus = { version = "0.13", optional = true }
axum-prometheus = { version = "0.8", optional = true }
clickhouse = { version = "0.13", optional = true }

aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }

rmp-serde = { version = "1", optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }

wtransport = { version = "0.7", optional = true }
anyhow = { version = "1", optional = true }
rand = { version = "0.8", optional = true }
futures-util = { version = "0.3", optional = true }
async-graphql = { version = "7", optional = true }
async-graphql-axum = { version = "7", optional = true }
simd-json = { version = "0.14", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
urlencoding = "2"

[package.metadata.leptos]
output-name = "platform"
bin-target = "platform"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-default-features = false
bin-default-features = false
style-file = "style/tailwind.css"
tailwind-input-file = "style/tailwind.css"
wasm-opt-features = [
  "-Oz",
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
  "--enable-sign-ext",
  "--enable-reference-types",
  "--enable-multivalue",
  "--enable-mutable-globals"
]
