[package]
name = "game-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_audio", "bevy_asset", "webgl2"] }
bevy_rapier2d = { version = "0.27", features = ["simd-stable", "wasm-bindgen"] }
ggrs = "0.11"
wasm-bindgen = "0.2"
